--- a/docassemble/CitationToDiscoverAssetsDebtor/data/questions/citation_to_discover_assets_debtor.yml
+++ b/docassemble/CitationToDiscoverAssetsDebtor/data/questions/citation_to_discover_assets_debtor.yml
@@ -56,6 +56,7 @@ code: |
         if renewal_date > judgment_date.plus(years=10):
           if is_consumer_debt:
             consumer_debt_kickout 
+  is_consumer_debt
   set_progress(20)
   if judgment_date > today().minus(days=30):
     wait_note
@@ -823,11 +824,25 @@ fields:
     required: False
     js show if:
      val('hearing_type') === "person"
-  - Instructions for attending by phone or video: remote_instructions
-    required: False
+  - Video conference website (URL): remote_website
+    maxlength: 100
     input type: area
+    rows: 2
+    required: False
     js show if:
-      val('hearing_type') === "remote"
+     val('hearing_type') === "remote"
+  - Video conference log-in information (Meeting ID, password, etc.): remote_login
+    maxlength: 100
+    input type: area
+    rows: 2
+    required: False
+    js show if:
+     val('hearing_type') === "remote"
+  - Call-in phone number for remote appearance: remote_phone
+    datatype: al_international_phone
+    required: False
+    js show if:
+     val('hearing_type') === "remote"
 ---
 id: any debtor docs
 question: |
@@ -1036,11 +1051,11 @@ content: |
 ---
 objects:
   - instructions: ALDocument.using(title="Instructions", filename="instructions.pdf", has_addendum=False)
-  - citation_first_page: ALDocument.using(title="Citation to Discover Assets", filename="citation_first_page.pdf", has_addendum=False)
-  - citation_remaining_pages: ALDocument.using(title="Citation to Discover Assets", filename="citation_remaining_pages.pdf", has_addendum=False)
+  - citation_editable_pages: ALDocument.using(title="Citation to Discover Assets", filename="citation_editable_pages.pdf", has_addendum=False)
+  - citation_uneditable_pages: ALDocument.using(title="Citation to Discover Assets", filename="citation_uneditable_pages.pdf", has_addendum=False)
 ---
 objects:
-  - citation_bundle: ALDocumentBundle.using(elements=[citation_first_page, citation_remaining_pages], filename="citation_to_discover_assets_to_debtor.pdf", title = "Citation to Discover Assets to Debtor")
+  - citation_bundle: ALDocumentBundle.using(elements=[citation_editable_pages, citation_uneditable_pages], filename="citation_to_discover_assets_to_debtor.pdf", title = "Citation to Discover Assets to Debtor")
 ---
 objects:
   - al_user_bundle: ALDocumentBundle.using(elements=[instructions, citation_bundle], filename="citation_to_discover_assets_to_debtor.pdf", title="All forms")
@@ -1048,8 +1063,8 @@ objects:
 ---
 code: |
   instructions.enabled = True
-  citation_first_page.enabled = True
-  citation_remaining_pages.enabled = True
+  citation_editable_pages.enabled = True
+  citation_uneditable_pages.enabled = True
   citation_bundle.enabled = True
 ---
 attachment:
@@ -1058,20 +1073,21 @@ attachment:
   filename: instructions
   skip undefined: True
   editable: False
-  pdf template file: instructions_citation_debtor.pdf
+  pdf template file: instructions_citation_debtor_2026.pdf
   fields:
       - "fake": ${ "" } 
 ---
 attachment:
-  variable name: citation_first_page[i]
-  name: citation_first_page
-  filename: citation_first_page
+  variable name: citation_editable_pages[i]
+  name: citation_editable_pages
+  filename: citation_editable_pages
   skip undefined: True
   editable: True
-  pdf template file: citation_debtor_first_page.pdf
+  pdf template file: citation_debtor_2026_editable_pages.pdf
   fields:
     - "county_1": ${trial_court.address.county.upper()}
     - "case_number_1": ${case_number}
+    - "case_number_2": ${case_number}
     - "plaintiff_list": |
         % if plaintiff_or_petitioner:
         ${users.full_names()}
@@ -1090,31 +1106,42 @@ attachment:
         % else:
         ${other_parties[0].name_full()}
         % endif
-    - "debtor_street": ${other_parties[0].address.line_one(bare=True)}
-    - "debtor_csz": ${other_parties[0].address.line_two()}
+    - "debtor_name_2": ${other_parties[0].name_full()}
+    - "debtor_address": ${other_parties[0].address.on_one_line(bare=True)}
     - "court_date": ${hearing_date}
     - "court_time": ${format_time(hearing_time, format='h:mm') if hearing_time != "" else ""}
     - "court_am": ${True if format_time(hearing_time, format='a')=='AM' and hearing_time != "" else ""}
     - "court_pm": ${True if format_time(hearing_time, format='a')=='PM' and hearing_time != "" else ""}
     - "in_person": ${True if hearing_type == "person" else False}
     - "remote": ${True if hearing_type == "remote" else False}
-    - "courtroom": ${courtroom if hearing_type == "person" else ""}
-    - "courtroom_street": |
+    - "courtroom_address_and_number": |
         % if hearing_type == "person":
-        ${court_name}, ${court_full_street}
+        ${court_name}, ${court_full_street}, ${court_csz}, Room ${courtroom}
         % endif
-    - "courtroom_csz": ${court_csz if hearing_type == "person" else ""}
-    - "remote_instructions": ${remote_instructions}
+    - "video_website": ${ remote_website if hearing_type == "remote" else ""}
+    - "log_in_info": ${ remote_login if hearing_type == "remote" else ""}
+    - "call_in_phone": ${ remote_phone if hearing_type == "remote" else ""}
     - "clerk_phone": ${trial_court.phone}
     - "clerk_website": ${trial_court.website}
+    - "judgment_date": |
+        % if (today().minus(years=7) > judgment_date) and been_revived:
+        ${renewal_date}
+        % else:
+        ${judgment_date}
+        % endif
+    - "judgment_amount": ${currency(judgment_amount, symbol=u'')}
+    - "owed_amount": ${currency(amount_still_owed, symbol=u'')}
+    - "is_consumer": ${is_consumer_debt}
+    - "not_consumer": ${True if not is_consumer_debt else False}
+    - "other_docs": ${debtor_docs if any_debtor_docs else ""}
 ---
 attachment:
-  variable name: citation_remaining_pages[i]
-  name: citation_remaining_pages
-  filename: citation_remaining_pages
+  variable name: citation_uneditable_pages[i]
+  name: citation_uneditable_pages
+  filename: citation_uneditable_pages
   skip undefined: True
-  editable: True
-  pdf template file: citation_debtor_remaining_pages.pdf
+  editable: False
+  pdf template file: citation_debtor_2026_uneditable_pages.pdf
   fields:
     - "plaintiff_list": |
         % if plaintiff_or_petitioner:
@@ -1129,27 +1156,18 @@ attachment:
         ${users.full_names()}
         % endif
     - "county_2": ${trial_court.address.county.upper()}
-    - "case_number_2": ${case_number}
     - "case_number_3": ${case_number}
     - "case_number_4": ${case_number}
     - "case_number_5": ${case_number}
     - "case_number_6": ${case_number}
     - "case_number_7": ${case_number}
-    - "judgment_date": |
-        % if (today().minus(years=7) > judgment_date) and been_revived:
-        ${renewal_date}
-        % else:
-        ${judgment_date}
-        % endif
-    - "judgment_amount": ${currency(judgment_amount, symbol=u'')}
-    - "owed_amount": ${currency(amount_still_owed, symbol=u'')}
-    - "other_docs": ${debtor_docs if any_debtor_docs else ""}
+    - "case_number_8": ${case_number}
     - "e_signature": ${users[0].name_full() if e_signature else ""}
     - "user_name_1": ${users[0].name_full() }
-    - "user_street": ${users[0].address.line_one(bare=True)}
-    - "user_csz": ${users[0].address.line_two()}
+    - "user_address": ${users[0].address.on_one_line(bare=True)}
     - "user_email": ${users[0].email if users[0].has_email_address else ""}
     - "user_phone": ${phone_number_formatted(users[0].phone_number) if users[0].phone_number != "" else ""}
+    - "for_self": ${True}
 ---
 section: Judgment
 id: judgment review screen
@@ -1177,6 +1195,10 @@ review:
     button: |
       **Debtor's name:**
       ${other_parties[0].name_full()}
+  - Edit: is_consumer_debt
+    button: |
+      **Was the judgment for consumer debt?**
+      ${word(yesno(is_consumer_debt))}
   - Edit: judgment_amount
     button: |
       **Original judgment amount:**
@@ -1186,9 +1208,9 @@ review:
       **Amount still owed:**
       ${currency(amount_still_owed)}
 ---
+section: Case details
 id: users review screen
 continue button field: users.revisit
-section: Case info
 question: |
   Edit your party
 subquestion: |
@@ -1202,13 +1224,47 @@ columns:
   - Name: |
       row_item.name_full() if defined("row_item.name.first") else ""
   - Party: |
-      action_button_html(url_action(row_item.attr_name("review_user_delivery")), label="Edit", icon="pencil-alt")
+      action_button_html(url_action(row_item.attr_name("review_party")), label="Edit", icon="pencil-alt")
 delete buttons: True
 confirm: True
 ---
+section: Case details
+id: party review screen
+continue button field: x.review_party
+generic object: ALIndividual
+question: |
+  Edit ${ x.name_full() }'s information
+subquestion: |  
+  % if x == users[0]:
+  Edit your address, phone number, and email address in the [**About you**](${ url_action('section_about_you') }) section.
+  % endif
+review: 
+  - Edit: x.name.first
+    button: |
+      **Party name:**
+      ${ x.name_full()  }
+  - Edit: x.has_agent
+    button: |
+      **Does ${x.name.first} have a registered agent?**
+      ${word(yesno(x.has_agent))}
+    show if: other_parties[0].person_type == "business"
+  - Edit: agent.name.first
+    button: |
+      **Agent's name:**
+      ${agent.name_full()}
+    show if: x == other_parties[0] and x.person_type == "business" and x.has_agent
+  - Edit: x.address.address
+    button: |
+      % if other_parties[0].person_type == "business" and other_parties[0].has_agent:
+      **${agent.name_full()}'s address:**
+      % else:
+      **${x.name_full()}'s address:**
+      % endif
+      ${x.address.on_one_line(bare=True)}
+---
+section: Case details
 id: other parties review screen
 continue button field: other_parties.revisit
-section: Case info
 question: |
     Edit the plaintiffs
 subquestion: |
@@ -1222,7 +1278,7 @@ columns:
   - Name: |
       row_item.name_full() if defined("row_item.name.first") else ""
   - Party: |
-      action_button_html(url_action(row_item.attr_name("review_other_delivery")), label="Edit", icon="pencil-alt")
+      action_button_html(url_action(row_item.attr_name("review_party")), label="Edit", icon="pencil-alt")
 delete buttons: True
 confirm: True
 ---
@@ -1306,7 +1362,7 @@ review:
       **Hearing information:**
       
       % if hearing_date != "":
-      * Date:${hearing_date}
+      * Date: ${hearing_date}
       % else:
       * Date: None entered
       % endif
@@ -1324,10 +1380,20 @@ review:
       % endif
       % elif hearing_type == "remote":
       * Type: By phone or video
-      % if remote_instructions != "":
-      * Instructions for attending: ${remote_instructions}
+      % if remote_website != "":
+      * Video conference website (URL): ${remote_website}
       % else:
-      * Instructions for attending: None entered
+      * Video conference website (URL): None entered
+      % endif
+      % if remote_login != "":
+      * Log-in information: ${remote_login}
+      % else:
+      * Log-in information: None entered
+      % endif
+      % if remote_phone != "":
+      * Call-in phone number: ${ phone_number_formatted(remote_phone) }
+      % else:
+      * Call-in phone number: None entered
       % endif
       % else:
       * Type: None entered
@@ -1404,6 +1470,10 @@ review:
     button: |
       **Debtor's name:**
       ${other_parties[0].name_full()}
+  - Edit: is_consumer_debt
+    button: |
+      **Was the judgment for consumer debt?**
+      ${word(yesno(is_consumer_debt))}
   - Edit: judgment_amount
     button: |
       **Original judgment amount:**
@@ -1486,7 +1556,7 @@ review:
       **Hearing information:**
       
       % if hearing_date != "":
-      * Date:${hearing_date}
+      * Date: ${hearing_date}
       % else:
       * Date: None entered
       % endif
@@ -1504,10 +1574,20 @@ review:
       % endif
       % elif hearing_type == "remote":
       * Type: By phone or video
-      % if remote_instructions != "":
-      * Instructions for attending: ${remote_instructions}
+      % if remote_website != "":
+      * Video conference website (URL): ${remote_website}
       % else:
-      * Instructions for attending: None entered
+      * Video conference website (URL): None entered
+      % endif
+      % if remote_login != "":
+      * Log-in information: ${remote_login}
+      % else:
+      * Log-in information: None entered
+      % endif
+      % if remote_phone != "":
+      * Call-in phone number: ${ phone_number_formatted(remote_phone) }
+      % else:
+      * Call-in phone number: None entered
       % endif
       % else:
       * Type: None entered
