--- a/docassemble/CitationToDiscoverAssetsDebtor/data/questions/citation_to_discover_assets_debtor.yml
+++ b/docassemble/CitationToDiscoverAssetsDebtor/data/questions/citation_to_discover_assets_debtor.yml
@@ -686,7 +686,7 @@ fields:
 ---
 id: judgment amount
 question: |
-  Info about what ${other_parties[0].name_full()} owes you
+  Details about what ${other_parties[0].name_full()} owes you
 subquestion: |
   This information is used to figure out how much money you are owed. This includes the original judgment amount, court costs, interest on the judgment amount, and how much ${other_parties[0].name_full()} has already paid you.
   
@@ -737,11 +737,11 @@ content: |
   % if (judgment_date > as_datetime('12/31/2019')):
   The interest rate is calculated as simple interest on the unpaid amount.
   
-  If you had a judgment of $1,000 two years ago, and it was not for consumer debt, the simple interest rate would be 9%. You would multiply $1,000 x 9% to get $90 for each year. That would bring the interest to a total of $180. That’s the amount you can ask for in your citation.
+  If you had a judgment of $1,000 two years ago, and it was not for consumer debt, the simple interest rate would be 9%. You would multiply $1,000 x 9% to get $90 for each year. That would bring the interest to a total of $180. That's the amount of interest you can ask for in your citation.
   % else:
   The 9% interest rate is calculated as simple interest on the unpaid amount.
 
-  If you had a judgment of $1,000 two years ago, and it was not for consumer debt, the simple interest rate would be 9%. You would multiply $1,000 x 9% to get $90 for each year. That would bring the interest to a total of $180. That’s the amount you can ask for in your citation.
+  If you had a judgment of $1,000 two years ago, and it was not for consumer debt, the simple interest rate would be 9%. You would multiply $1,000 x 9% to get $90 for each year. That would bring the interest to a total of $180. That's the amount of interest you can ask for in your citation.
   % endif
 ---
 depends on:
@@ -815,8 +815,9 @@ fields:
     datatype: time
     required: False
   - Hearing type: hearing_type
-    input type: radio
+    datatype: checkboxes
     required: False
+    none of the above: False
     choices:
       - In person: person
       - By phone or video: remote
@@ -828,20 +829,17 @@ fields:
     input type: area
     rows: 2
     required: False
-    js show if:
-     val('hearing_type') === "remote"
+    show if: hearing_type['remote']
   - Video conference log-in information (Meeting ID, password, etc.): remote_login
     maxlength: 100
     input type: area
     rows: 2
     required: False
-    js show if:
-     val('hearing_type') === "remote"
+    show if: hearing_type['remote']
   - Call-in phone number for remote appearance: remote_phone
     datatype: al_international_phone
     required: False
-    js show if:
-     val('hearing_type') === "remote"
+    show if: hearing_type['remote']
 ---
 id: any debtor docs
 question: |
@@ -860,13 +858,13 @@ subquestion: |
 fields:
   - Should ${other_parties[0].name_full()} bring additional documents?: any_debtor_docs
     datatype: yesnoradio
-  - note: |
-      The form has space for about **300 characters**, including spaces.
-    show if: any_debtor_docs
   - What additional documents should they bring?: debtor_docs
     input type: area
     rows: 8
-    maxlength: 300
+    maxlength: 250
+    show if: any_debtor_docs
+  - note: |
+      The form has space for about **250 characters**, including spaces.
     show if: any_debtor_docs
 ---
 sets:
@@ -1113,16 +1111,16 @@ attachment:
     - "court_time": ${format_time(hearing_time, format='h:mm') if hearing_time != "" else ""}
     - "court_am": ${True if format_time(hearing_time, format='a')=='AM' and hearing_time != "" else ""}
     - "court_pm": ${True if format_time(hearing_time, format='a')=='PM' and hearing_time != "" else ""}
-    - "in_person": ${True if hearing_type == "person" else False}
-    - "remote": ${True if hearing_type == "remote" else False}
+    - "in_person": ${True if hearing_type['person'] else False}
+    - "remote": ${True if hearing_type['remote'] else False}
     - "courtroom": ${courtroom}
     - "courtroom_address_and_number": |
-        % if hearing_type == "person":
+        % if hearing_type['person']:
         ${court_name}, ${court_full_street}, ${court_csz}, Room ${courtroom}
         % endif
-    - "video_website": ${ remote_website if hearing_type == "remote" else ""}
-    - "log_in_info": ${ remote_login if hearing_type == "remote" else ""}
-    - "call_in_phone": ${ remote_phone if hearing_type == "remote" else ""}
+    - "video_website": ${ remote_website if hearing_type['remote'] else ""}
+    - "log_in_info": ${ remote_login if hearing_type['remote'] else ""}
+    - "call_in_phone": ${ remote_phone if hearing_type['remote'] else ""}
     - "clerk_phone": ${trial_court.phone}
     - "clerk_website": ${trial_court.website}
     - "judgment_date": |
@@ -1373,15 +1371,20 @@ review:
       % else:
       * Time: None entered
       % endif
-      % if hearing_type == "person":
+      % if hearing_type['person'] and not hearing_type['remote']:
       * Type: In person
+      % elif hearing_type['remote'] and not hearing_type['person']:
+      * Type: By phone or video
+      % elif hearing_type['remote'] and hearing_type['person']:
+      * Type: In person or by phone or video
+      % else:
+      * Type: None entered
+      % endif
       % if courtroom != "":
       * Courtroom: ${courtroom}
       % else:
       * Courtroom: None entered
       % endif
-      % elif hearing_type == "remote":
-      * Type: By phone or video
       % if remote_website != "":
       * Video conference website (URL): ${remote_website}
       % else:
@@ -1396,9 +1399,6 @@ review:
       * Call-in phone number: ${ phone_number_formatted(remote_phone) }
       % else:
       * Call-in phone number: None entered
-      % endif
-      % else:
-      * Type: None entered
       % endif
   - Edit: any_debtor_docs
     button: |
@@ -1567,15 +1567,20 @@ review:
       % else:
       * Time: None entered
       % endif
-      % if hearing_type == "person":
+      % if hearing_type['person'] and not hearing_type['remote']:
       * Type: In person
+      % elif hearing_type['remote'] and not hearing_type['person']:
+      * Type: By phone or video
+      % elif hearing_type['remote'] and hearing_type['person']:
+      * Type: In person or by phone or video
+      % else:
+      * Type: None entered
+      % endif
       % if courtroom != "":
       * Courtroom: ${courtroom}
       % else:
       * Courtroom: None entered
       % endif
-      % elif hearing_type == "remote":
-      * Type: By phone or video
       % if remote_website != "":
       * Video conference website (URL): ${remote_website}
       % else:
@@ -1590,9 +1595,6 @@ review:
       * Call-in phone number: ${ phone_number_formatted(remote_phone) }
       % else:
       * Call-in phone number: None entered
-      % endif
-      % else:
-      * Type: None entered
       % endif
   - Edit: any_debtor_docs
     button: |
